--- a/blackjack-web/html/main.css
+++ b/blackjack-web/html/main.css
@@ -1,6 +1,26 @@
-div.center
+.selectable
+{
+	cursor:pointer;
+	text-align:center;
+}
+
+.selectable:hover
+{
+	color:#ffffff;
+	background-color:#0000ff;
+}
+
+.selected
+{
+	color:#ffffff;
+	background-color:#0000aa;
+	text-align:center;
+}
+
+.center
 {
 	text-align: center;
+	margin: 0 auto;
 }
 
 div.cards
@@ -19,3 +39,12 @@ div#cards
 	margin:0 auto;
 }
 
+div#manage_players_div
+{
+	width: 300px;
+}
+
+div#player_list
+{
+	width: 300px;
+}
